--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
+jinja2>=3.1.3
 MarkupSafe==2.1.3
 multidict==6.0.4
 packaging==23.1
