--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiodocker==0.21.0
-aiohttp==3.8.6
+aiohttp>=3.9.0
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
@@ -21,8 +21,8 @@ packaging==23.1
 prometheus-client==0.17.1
 requests==2.31.0
 typing_extensions==4.8.0
-urllib3==2.0.4
+urllib3>=2.0.7
 websocket-client==1.6.2
-Werkzeug==2.3.7
+werkzeug>=2.3.8
 yarl==1.9.2
 zipp==3.16.2
